[project]
name = "matspy"
version = "0.6"
description="Sparse matrix spy plot, HTML, and LaTeX rendering with Jupyter integration."
readme = "README.md"
authors = [
    { name = "Adam Lugowski"},
]
dependencies = [
  'numpy',
  'matplotlib',
]
requires-python = ">=3.7"

classifiers = [
#    "Development Status :: 5 - Production/Stable",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/alugowski/matspy"
repository = "https://github.com/alugowski/matspy"

[project.optional-dependencies]
test = ["pytest", "scipy", "matplotlib", "html5lib", "matrepr"]
